deploy-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  namespace: ingress-nginx
  labels:
    app: deploy1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deploy1
  template:
    metadata:
      labels:
        app: deploy1
    spec:
      containers:
      - name: container
        image: bitbull/webserver
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: ingress-nginx
spec:
  selector:
    app: deploy1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
      nodePort:
