deploy-pod2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy2
  namespace: ingress-nginx
  labels:
    app: deploy2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deploy2
  template:
    metadata:
      labels:
        app: deploy2
    spec:
      containers:
      - name: container
        image: severalnines/proxysql
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: ingress-nginx
spec:
  selector:
    app: deploy2
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort:
